--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -184,6 +184,8 @@
                     <th>Advanced</th>
                     <th>Remaining</th>
                     <th>Heard from </th>
+                    <th></th>
+                    <th></th>
                 </tr>
             
 
@@ -207,6 +209,11 @@
                     <td>{{order.advanced}}</td>
                     <td>${{order.remaining}}</td>
                     <td>{{order.where_heard_from_us}}</td>
+                    <td><a href="{% url 'edit_order'  order.pk  %}"><button class="btn btn-sm btn-primary"><i class="far fa-edit">
+                        Edit</i></button></a> </td>
+        <td><a href="{% url 'delete_order' order.pk %}"><button class="btn btn-sm btn-danger "><i class="fas fa-trash-alt">
+                        Delete</i></button></a>
+
                 </tr>
                 {% endfor %}
             </table>
