--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -1,17 +1,52 @@
 {% extends 'base2.html' %}
-{% block title %}{{excursions.title}}{% endblock %}
-{% block description %}{{ excursions.meta_description }}{% endblock %}
+{% block title %}Top Punta Cana Tours | Book {{ excursions.title }} for the Best Adventure{% endblock %}
+{% block description %}"Discover top Punta Cana tours like {{ excursions.title }}. Unforgettable activities, stunning views, and easy booking. Reserve now for an adventure!"
+{% endblock %}
+
 {% load static %}
 
-<!-- <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDG9TokC3lqJJD7aPJhfAotYVBXq0508ng&libraries=places"></script> -->
 
 {% block content %}
 {% include 'excursions/header.html' %}
+{% block content %}
+<!-- Your other content here -->
+
+<!-- Schema Markup for Main Excursion -->
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "TouristTrip",
+    "name": "{{ excursions.title }}",
+    "description": "{{ excursions.meta_description }}",
+    "image": "{{ excursions.main_image.url }}",
+    "offers": {
+        "@type": "Offer",
+        "priceCurrency": "USD",
+        "price": "{{ excursions.Price }}",
+        "availability": "https://schema.org/InStock",
+        "url": "{{ request.build_absolute_uri }}"
+    },
+    "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "{{ excursions.get_average_rating }}",
+        "reviewCount": "{{ excursions.reviews.count }}",
+        "priceCurrency": "USD"
+    },
+    "touristType": "International",
+    "provider": {
+        "@type": "Organization",
+        "name": "Punta Cana Discovery",
+        "url": "https://puntacanadiscovery.com"
+    }
+}
+</script>
+
+{% endblock content %}
+
 <!-- header for adding to cart -->
 <div class="gallery">
   {% for excursion in excursions.photos.all %}
-  <img src="{{excursion.images.url}}" alt="{{excursions.image_name}}" data-index="{{forloop.counter }}">
+  <img src="{{excursion.images.url}}" alt="Best Punta Cana Tours - {{excursions.title}}">
   {% endfor %}
 </div>
 
@@ -64,13 +99,15 @@
     {% endif%}
 
     <div class="activity-details">
-      <h2>About this activity</h2>
+      <h2><h2>About {{ excursions.title }} Tour in Punta Cana</h2></h2>
       <ul>
         <li><i class="fas fa-times-circle"></i> <strong>Free cancellation:</strong> Cancel up to 24 hours in advance for
           a full refund</li>
         <li><i class="fas fa-calendar-check"></i> <strong>Reserve now :</strong> Book your spot and pay just for
           reservation and rest at pick up</li>
+          {% if excursion.duration_time %}
         <li><i class="fas fa-clock"></i> <strong>Duration:</strong> {{excursion.duration_time}} hours</li>
+          {% endif %}
         <li><i class="fas fa-ticket-alt"></i> <strong>Skip the ticket line</strong></li>
         <li><i class="fas fa-globe"></i> <strong>Live tour guide:</strong> Available in Spanish, English, French,
           Portuguese</li>
@@ -344,7 +381,8 @@
                   "aggregateRating": {
                       "@type": "AggregateRating",
                       "ratingValue": "excursion.get_average_rating",
-                      "reviewCount": "{{ excursion.reviews.count }}"
+                      "reviewCount": "{{ excursion.reviews.count }}",
+                      "priceCurrency": "USD"
                   },
                   "touristType": "International",
                   "provider": {
